# Racing-LMPC-ROS2

./: .gitignore  README.md  humble.repos  lmpc.foxglove.json  test.txt
.github/: CODEOWNERS
mpc/racing_lqr/: CMakeLists.txt  package.xml
mpc/racing_lqr/include/racing_lqr/: racing_lqr.hpp
mpc/racing_lqr/param/: sample_lqr.param.yaml  sample_lqr_2.param.yaml
mpc/racing_lqr/src/: racing_lqr.cpp  ros_param_loader.cpp
mpc/racing_lqr/test/: test_racing_lqr.cpp
src/common/lmpc_msgs/: CMakeLists.txt  package.xml
src/common/lmpc_msgs/msg/: MPCTelemetry.msg  TrajectoryCommand.msg
src/common/mpclab_msgs/: CMakeLists.txt  README.md  package.xml
src/common/mpclab_msgs/msg/: BodyAngularAccelerationMsg.msg  BodyAngularVelocityMsg.msg  BodyLinearAccelerationMsg.msg  BodyLinearVelocityMsg.msg  ControllerStatusMsg.msg  DriveStateMsg.msg  EncoderMsg.msg  OrientationEulerMsg.msg  OrientationQuaternionMsg.msg  ParametricPoseMsg.msg  ParametricVelocityMsg.msg  PositionMsg.msg  PredictionMsg.msg  TimingMsg.msg  TrackLookaheadMsg.msg  VehicleActuationMsg.msg  VehicleStateMsg.msg
src/controllers/racing_lmpc/: CMakeLists.txt  package.xml
src/controllers/racing_lmpc/include/racing_lmpc/: racing_lmpc.hpp  racing_lmpc_config.hpp  racing_lmpc_node.hpp  ros_param_loader.hpp
src/controllers/racing_lmpc/launch/: racing_lmpc.launch.py
src/controllers/racing_lmpc/param/: sample_mpc.param.yaml  sample_mpc_2.param.yaml
src/controllers/racing_lmpc/src/: racing_lmpc.cpp  racing_lmpc_node.cpp  ros_param_loader.cpp
src/controllers/racing_lmpc/test/: test_racing_lmpc.cpp
src/controllers/vanilla_controller/: CMakeLists.txt  package.xml
src/controllers/vanilla_controller/include/vanilla_controller/: ros_param_loader.hpp  vanilla_controller.hpp  vanilla_controller_config.hpp  vanilla_controller_node.hpp
src/controllers/vanilla_controller/launch/: vanilla_controller.launch.py
src/controllers/vanilla_controller/param/: vanilla_controller.param.yaml  vanilla_controller_2.param.yaml
src/controllers/vanilla_controller/src/: ros_param_loader.cpp  vanilla_controller.cpp  vanilla_controller_node.cpp
src/controllers/vanilla_controller/test/: test_vanilla_controller.cpp
src/launch/racing_lmpc_launch/: CMakeLists.txt  package.xml
src/launch/racing_lmpc_launch/launch/barc/: sim_barc_lmpc.launch.py  sim_barc_tracking_mpc.launch.py
src/launch/racing_lmpc_launch/launch/putnam/: sim_putnam_config_a_tracking_mpc.launch.py  sim_putnam_short_lmpc.launch.py  sim_putnam_short_tracking_mpc.launch.py
src/launch/racing_lmpc_launch/param/barc/: barc_base.param.yaml  barc_single_track.param.yaml
src/launch/racing_lmpc_launch/param/hawaii_gokart/: hawaii_gokart_single_track.param.yaml
src/launch/racing_lmpc_launch/param/iac_car/: iac_car_single_track.param.yaml
src/launch/racing_lmpc_launch/param/racing_mpc/: barc_lmpc.param.yaml  barc_tracking_mpc.param.yaml  hawaii_kart_tracking_mpc.param.yaml  iac_car_lmpc.param.yaml  iac_car_tracking_mpc.param.yaml
src/launch/racing_lmpc_launch/param/racing_simulator/: continuous_simulator.param.yaml  step_simulator.param.yaml
src/simulation/racing_simulator/: CMakeLists.txt  package.xml
src/simulation/racing_simulator/include/racing_simulator/: racing_simulator.hpp  racing_simulator_config.hpp  racing_simulator_node.hpp  ros_param_loader.hpp
src/simulation/racing_simulator/launch/: racing_simulator.launch.py  racing_simulator_continuous.launch.py  racing_simulator_continuous_putnam.launch.py  racing_simulator_step.launch.py  racing_simulator_step_putnam.launch.py
src/simulation/racing_simulator/param/: continuous_simulator.param.yaml  sample_simulator.param.yaml  step_simulator.param.yaml
src/simulation/racing_simulator/src/: racing_simulator.cpp  racing_simulator_node.cpp  ros_param_loader.cpp
src/simulation/racing_simulator/test/: test_racing_simulator.cpp
src/state_estimators/ekf_state_estimator/: CMakeLists.txt  package.xml
src/state_estimators/ekf_state_estimator/src/: ekf_state_estimator.cpp
src/state_estimators/ekf_state_estimator/test_data/: u_optm.txt  x_optm.txt
src/tools/lmpc_transform_helper/: CMakeLists.txt  package.xml
src/tools/lmpc_transform_helper/src/: transform_helper.cpp
src/tools/lmpc_utils/: CMakeLists.txt  package.xml
src/tools/lmpc_utils/lmpc_utils/: lmpc_launch_utils.py
src/tools/lmpc_utils/src/: pid_controller.cpp  primitives.cpp  utils.cpp
src/tools/lmpc_utils/test/: test_lmpc_utils.cpp
src/vehicle_dynamics_models/base_vehicle_model/: CMakeLists.txt
src/vehicle_dynamics_models/base_vehicle_model/param/: sample_vehicle.param.yaml  sample_vehicle_2.param.yaml
src/vehicle_dynamics_models/base_vehicle_model/src/: base_vehicle_model.cpp  ros_param_loader.cpp
src/vehicle_dynamics_models/kinematic_bicycle_model/: CMakeLists.txt  package.xml
src/vehicle_dynamics_models/kinematic_bicycle_model/param/: sample_vehicle.param.yaml  sample_vehicle_2.param.yaml
src/vehicle_dynamics_models/kinematic_bicycle_model/src/: kinematic_bicycle_model.cpp  ros_param_loader.cpp
src/vehicle_dynamics_models/kinematic_bicycle_model/test/: test_kinematic_bicycle_model.cpp
src/vehicle_dynamics_models/racing_trajectory/: CMakeLists.txt  package.xml
src/vehicle_dynamics_models/racing_trajectory/src/: racing_trajectory.cpp  racing_trajectory_map.cpp  ros_trajectory_visualizer.cpp  safe_set.cpp  trajectory_kd_tree.cpp
src/vehicle_dynamics_models/racing_trajectory/test/: test_racing_trajectory.cpp
src/vehicle_dynamics_models/racing_trajectory/test_data/: mgkt_center.txt  mgkt_optm.txt  uhmc_optm.txt
src/vehicle_dynamics_models/vehicle_model_factory/: CMakeLists.txt  package.xml
src/vehicle_dynamics_models/vehicle_model_factory/src/: vehicle_model_factory.cpp
src/vehicle_dynamics_models/vehicle_model_factory/test/: test_vehicle_model_factory.cpp
tools/lmpc_utils/: CMakeLists.txt  package.xml
tools/lmpc_utils/include/lmpc_utils/: logging.hpp  primitives.hpp  ros_param_helper.hpp  utils.hpp
tools/lmpc_utils/src/: logging.cpp  lookup.cpp
tools/lmpc_utils/test/: test_lmpc_utils.cpp
(+142 files in other folders)
