<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinematic_bicycle_model</name>
  <version>1.0.0</version>
  <description>a double track planar vehicle model that considers lateral load transfer</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>backward_ros</depend>

  <depend>lmpc_utils</depend>
  <depend>base_vehicle_model</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
