<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_model_factory</name>
  <version>1.0.0</version>
  <description>factory for loading vehicle models</description>
  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>backward_ros</depend>

  <depend>base_vehicle_model</depend>
  <depend>kinematic_bicycle_model</depend>
  <depend>single_track_planar_model</depend>
  <depend>double_track_planar_model</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
